# nf-pooled-cellpainting-infra

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  cdk.context.json  cdk.json  infrastructure_stack.py  pyproject.toml
.claude/: settings.local.json
